terminadas las vistas creo

--- a/Views/Autor/Create.cshtml
+++ b/Views/Autor/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Nuevo Autor</h1>
+<h1 id="tituloHome">Nuevo Autor</h1>
 
 <h4>Completar todos los campos</h4>
 <hr />
