--- a/Views/Libro/Delete.cshtml
+++ b/Views/Libro/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar</h1>
+<h1 id="tituloHome">Eliminar</h1>
 
 <h3>¿Desea eliminar el registro?</h3>
 <div>
