--- a/Views/Libro/Edit.cshtml
+++ b/Views/Libro/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-    <h1>@Html.DisplayNameFor(model => model.titulo)</h1>
+    <h1 id="tituloHome">@Html.DisplayNameFor(model => model.titulo)</h1>
 
 <h4>Editar</h4>
 <hr />
