--- a/Views/Libro/Index.cshtml
+++ b/Views/Libro/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="vista">
-        <h1>Libros</h1>
+        <h1 id="tituloHome">Libros</h1>
 
         @using (Html.BeginForm())
         {
