--- a/Views/Autor/Delete.cshtml
+++ b/Views/Autor/Delete.cshtml
@@ -4,30 +4,31 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar</h1>
+<h1 id="tituloHome">Eliminar</h1>
+<div class="vista">
+    <h3>¿Desea eliminar el registro?</h3>
+    <div>
+        <h4>Autor</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.nombre)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.nombre)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.apellido)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.apellido)
+            </dd>
+        </dl>
 
-<h3>¿Desea eliminar el registro?</h3>
-<div>
-    <h4>Autor</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.apellido)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="id" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver al indice</a>
-    </form>
-</div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="id" />
+            <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+            <a asp-action="Index">Volver al indice</a>
+        </form>
+    </div>
+    </div>
