--- a/Views/Autor/Edit.cshtml
+++ b/Views/Autor/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-    <h1>@Html.DisplayNameFor(model => model.nombre) @Html.DisplayNameFor(model => model.apellido)</h1>
+    <h1 id="tituloHome">@Html.DisplayFor(model => model.nombre) @Html.DisplayFor(model => model.apellido)</h1>
 
 <h4>Editar</h4>
 <hr />
