--- a/Views/Libro/Create.cshtml
+++ b/Views/Libro/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="vista">
-        <h1>Nuevo Libro</h1>
+        <h1 id="tituloHome">Nuevo Libro</h1>
 
         <h4>Completar los campos</h4>
         <hr />
