--- a/Views/Libro/Details.cshtml
+++ b/Views/Libro/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-    <h1>@Html.DisplayFor(model => model.titulo)</h1>
+    <h1 id="tituloHome">@Html.DisplayFor(model => model.titulo)</h1>
 
 <div>
     <h4>Detalles</h4>
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.resena)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.resena)
+           <div class="resenia"> @Html.DisplayFor(model => model.resena) </div>
         </dd>
     </dl>
 </div>
@@ -61,7 +61,7 @@
                     @Html.TextBox("id",idLibro.id)
                 </p>
                 
-                <input type="submit" asp-action="agregarFavorito" value="Agregar a Favoritos" class="btn-outline-dark form-control"/>
+                <input type="submit" asp-action="agregarFavorito" value="Agregar a Favoritos" class="boton"/>
                 
             </div>
 
@@ -75,7 +75,7 @@
             @Html.TextBox("id", idLibro.id)
         </p>
 
-        <input type="submit" asp-action="quitarFavorito" value="Quitar de Favoritos" class="btn-outline-dark form-control" />
+        <input type="submit" asp-action="quitarFavorito" value="Quitar de Favoritos" class="boton" />
         
     </div>
 
