--- a/Views/Libro/Details.cshtml
+++ b/Views/Libro/Details.cshtml
@@ -5,88 +5,89 @@
 }
 
     <h1 id="tituloHome">@Html.DisplayFor(model => model.titulo)</h1>
+    <div class="vista">
+        <div>
+            <h4>Detalles</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.titulo)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.titulo)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.isbn)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.isbn)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.autorid)
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.autor
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.puntaje)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.ViewBag.promedio
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.votos)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.votos)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.resena)
+                </dt>
+                <dd class="col-sm-10">
+                    <div class="resenia"> @Html.DisplayFor(model => model.resena) </div>
+                </dd>
+            </dl>
+        </div>
+        <div>
+            @using (Html.BeginForm())
+            {
+                <div>
 
-<div>
-    <h4>Detalles</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.titulo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.titulo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.isbn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.isbn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.autorid)
-        </dt>
-        <dd class="col-sm-10">
-            @ViewBag.autor
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.puntaje)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.ViewBag.promedio
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.votos)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.votos)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.resena)
-        </dt>
-        <dd class="col-sm-10">
-           <div class="resenia"> @Html.DisplayFor(model => model.resena) </div>
-        </dd>
-    </dl>
-</div>
-<div>
-    @using (Html.BeginForm())
-    {
-    <div>
-        
-        @if (ViewBag.esFav == null)
-        {
-            var idLibro = new { id = (int) ViewBag.idLibro };
-            <div id="actionAgregar">
-                <p hidden>
-                    @Html.TextBox("id",idLibro.id)
-                </p>
-                
-                <input type="submit" asp-action="agregarFavorito" value="Agregar a Favoritos" class="boton"/>
-                
-            </div>
+                    @if (ViewBag.esFav == null)
+                    {
+                        var idLibro = new { id = (int)ViewBag.idLibro };
+                        <div id="actionAgregar">
+                            <p hidden>
+                                @Html.TextBox("id", idLibro.id)
+                            </p>
 
-        }
-        else
-        {
-            
-            var idLibro = new { id = (int) ViewBag.idLibro };
-    <div id="actionQuitar">
-        <p hidden>
-            @Html.TextBox("id", idLibro.id)
-        </p>
+                            <input type="submit" asp-action="agregarFavorito" value="Agregar a Favoritos" class="boton" />
 
-        <input type="submit" asp-action="quitarFavorito" value="Quitar de Favoritos" class="boton" />
-        
-    </div>
+                        </div>
 
-        }
+                    }
+                    else
+                    {
 
-    </div>
-    }
+                        var idLibro = new { id = (int)ViewBag.idLibro };
+                        <div id="actionQuitar">
+                            <p hidden>
+                                @Html.TextBox("id", idLibro.id)
+                            </p>
+
+                            <input type="submit" asp-action="quitarFavorito" value="Quitar de Favoritos" class="boton" />
+
+                        </div>
+
+                    }
+
+                </div>
+            }
 
 
- </div>
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.id">Editar</a> |
-        <a asp-action="Index">Volver al indice</a>
+        </div>
+        <div>
+            <a asp-action="Edit" asp-route-id="@Model.id">Editar</a> |
+            <a asp-action="Index">Volver al indice</a>
+        </div>
     </div>
