TERMINADO FIN GRACIAS ADIÓS

--- a/Views/Autor/Details.cshtml
+++ b/Views/Autor/Details.cshtml
@@ -79,6 +79,6 @@
             <hr>
             <div>
                 <a asp-action="Edit" asp-route-id="@Model.id">Editar</a> |
-                <a asp-action="Index">Volver al indice</a>
+                <a asp-action="Index">Volver al índice</a>
             </div>
         </div>
