--- a/Views/Autor/DetailsInvitado.cshtml
+++ b/Views/Autor/DetailsInvitado.cshtml
@@ -39,6 +39,6 @@
         </div>
         <hr>
         <div>
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </div>
     </div>
