--- a/Views/Libro/Create.cshtml
+++ b/Views/Libro/Create.cshtml
@@ -42,7 +42,7 @@
         </div>
 
         <div>
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </div>
 
         @section Scripts {
