--- a/Views/Libro/IndexUser.cshtml
+++ b/Views/Libro/IndexUser.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm()) 
 {
 <div class="vista">
-    <label for="busqueda1">Buscar por titulo</label>
+    <label for="busqueda1">Buscar por título</label>
     <p id="busqueda1">
         @Html.TextBox("testo")
     </p>
