--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -48,7 +48,7 @@
     <div>
         @if (Context.Session.GetString("esAdmin") == "True")
         {
-            <a asp-action="Index">Volver al indice</a>
+        <a asp-action="Index">Volver al índice</a>
         }
 
 
