--- a/Views/Autor/Create.cshtml
+++ b/Views/Autor/Create.cshtml
@@ -30,7 +30,7 @@
         </div>
 
         <div>
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </div>
 
         @section Scripts {
