--- a/Views/Autor/Delete.cshtml
+++ b/Views/Autor/Delete.cshtml
@@ -8,7 +8,7 @@
 <div class="vista">
     <h3>¿Desea eliminar el registro?</h3>
     <div>
-        <h4>Autor</h4>
+        <h4>@Html.DisplayFor(model => model.nombre) @Html.DisplayFor(model => model.apellido)</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
@@ -28,7 +28,7 @@
         <form asp-action="Delete">
             <input type="hidden" asp-for="id" />
             <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </form>
     </div>
     </div>
