--- a/Views/Autor/DetailsUser.cshtml
+++ b/Views/Autor/DetailsUser.cshtml
@@ -78,7 +78,7 @@
             </div>
             <hr>
             <div>
-                <a asp-action="Index">Volver al indice</a>
+                <a asp-action="Index">Volver al índice</a>
             </div>
         </div>
     </div>
