--- a/Views/Libro/Delete.cshtml
+++ b/Views/Libro/Delete.cshtml
@@ -8,7 +8,7 @@
 
         <h3>¿Desea eliminar el registro?</h3>
         <div>
-            <h4>Libro</h4>
+            <h4>@Html.DisplayFor(model => model.titulo)</h4>
             <hr />
             <dl class="row">
                 <dt class="col-sm-2">
@@ -46,7 +46,7 @@
             <form asp-action="Delete">
                 <input type="hidden" asp-for="id" />
                 <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-                <a asp-action="Index">Volver al indice</a>
+                <a asp-action="Index">Volver al índice</a>
             </form>
         </div>
     </div>
