--- a/Views/Libro/Details.cshtml
+++ b/Views/Libro/Details.cshtml
@@ -88,6 +88,6 @@
         </div>
         <div>
             <a asp-action="Edit" asp-route-id="@Model.id">Editar</a> |
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </div>
     </div>
