--- a/Views/Libro/Index.cshtml
+++ b/Views/Libro/Index.cshtml
@@ -10,7 +10,7 @@
         @using (Html.BeginForm())
         {
             <div>
-                <label for="busqueda1">Buscar por titulo</label>
+                <label for="busqueda1">Buscar por título</label>
                 <p id="busqueda1">
                     @Html.TextBox("testo")
                 </p>
