--- a/Views/Usuario/Delete.cshtml
+++ b/Views/Usuario/Delete.cshtml
@@ -46,7 +46,7 @@
         <form asp-action="Delete">
             <input type="hidden" asp-for="id" />
             <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-            <a asp-action="Index">Volver al indice</a>
+            <a asp-action="Index">Volver al índice</a>
         </form>
     </div>
     </div>
