--- a/Views/Usuario/Details.cshtml
+++ b/Views/Usuario/Details.cshtml
@@ -65,7 +65,7 @@
         <a asp-action="Edit" asp-route-id="@Model.id">Editar</a>
         @if (Context.Session.GetString("esAdmin") == "True")
         {
-            <a asp-action="Index">Volver al indice</a>
+    <a asp-action="Index">Volver al índice</a>
         }
     </div>
     </div>
