--- a/Views/Autor/Details.cshtml
+++ b/Views/Autor/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-    <h1 class="tituloHome">@Html.DisplayFor(model => model.nombre) @Html.DisplayFor(model => model.apellido)</h1>
+    <h1 id="tituloHome">@Html.DisplayFor(model => model.nombre) @Html.DisplayFor(model => model.apellido)</h1>
     <div class="vista">
         <div>
             <h4>Detalles</h4>
