--- a/Views/Autor/IndexUser.cshtml
+++ b/Views/Autor/IndexUser.cshtml
@@ -13,7 +13,7 @@
             <p id="busqueda2">
                 @Html.TextBox("testo")
             </p>
-            <input type="submit" asp-action="buscarAutor" value="Buscar" />
+            <input type="submit" asp-action="Search" value="Buscar" />
         </div>
     }
 
